Fix alignment for grand totals

--- a/Survey/source/styles/a-label.scss
+++ b/Survey/source/styles/a-label.scss
@@ -39,7 +39,8 @@ th .a-label-option {
     color: globals.$titles;
 }
 
-.a-label-total-column {
+.a-label-total-column,
+.a-label-total-grand {
     margin-bottom: 0;
 }
 
